--- a/StepGame/Info.plist
+++ b/StepGame/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Privacy - Health Update Usage Description
+Privacy - Health Update Usage Description
+Privacy - Health Update Usage Description
+</key>
+	<string>افتح الخطوات للعب</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>RussoOne-Regular.ttf</string>
