Refactor Map UI layout and animations
- Improved map UI visuals and layout adjustments
- Prevent step updates when challenge is ended
- Stop step sync timer after challenge completion

--- a/StepGame/Info.plist
+++ b/StepGame/Info.plist
@@ -6,7 +6,7 @@
 Privacy - Health Update Usage Description
 Privacy - Health Update Usage Description
 </key>
-	<string>افتح الخطوات للعب</string>
+	<string>Turn on step tracking to start your journey!</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>RussoOne-Regular.ttf</string>
